--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -161,7 +162,7 @@
                     </svg>
                     <P>Details</P>
                   </li>
-                  <li class="row">
+                  <li id="linksShow" class="row">
                     <svg
                       version="1.1"
                       id="Layer_1"
@@ -180,7 +181,7 @@
                     </svg>
                     <P>Links</P>
                   </li>
-                  <li class="row">
+                  <li id="bannersShow" class="row">
                     <svg
                       version="1.1"
                       id="Layer_1"
@@ -198,7 +199,7 @@
                     </svg>
                     <P>Banners</P>
                   </li>
-                  <li class="row">
+                  <li id="personalDataShow" class="row">
                     <svg
                       version="1.1"
                       id="Layer_1"
@@ -340,14 +341,200 @@
                       </div>
                     </div>
                     <div class="chart">
-                      <img src="https://plot.ly/~RPlotBot/3512/count-vs-animals.png" alt="chart">
+                      <canvas id="myChart" height="200px"></canvas>
                     </div>
                   </div>
+                </section>
+              <section id="links" class="main">
+                <div class="content">
+                  <div class="contentTitle">
+                    <h1>Links</h1>
+                  </div>
+                  <div class="links">
+                    <button class="btn-orange"><p>+ add new</p></button>
+                    <div class="linkList">
+                      <ul>
+                        <li id="1">
+                        <div class="linkEl">
+                          <p>Home page</p><a href="#">http://wwww.homepage.com</a>
+                        </div>
+                          <div class="linkControl">
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
+                            <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
+                            </svg>
+                              <svg version="1.1" id="trash" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
+                              </svg>
+                          </div>
+                        </li>
+                        <li id="2">
+                        <div class="linkEl">
+                          <p>Home page</p><a href="#">http://wwww.homepage.com</a>
+                        </div>
+                          <div class="linkControl">
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
+                            <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
+                            </svg>
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
+                            </svg>
+                          </div>
+                        </li>
+                        <li id="3">
+                        <div class="linkEl">
+                          <p>Home page</p><a href="#">http://wwww.homepage.com</a>
+                        </div>
+                          <div class="linkControl">
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
+                            <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
+                            </svg>
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
+                            </svg>
+                          </div>
+                        </li>
+                        <li id="4">
+                        <div class="linkEl">
+                          <p>Home page</p><a href="#">http://wwww.homepage.com</a>
+                        </div>
+                          <div class="linkControl">
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
+                            <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
+                            </svg>
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
+                            </svg>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                    <button class="btn-orange"><p>+ add new</p></button>
                   </div>
                 </div>
               </section>
+              <section id="banners" class="main">
+                  <div class="content">
+                    <div class="contentTitle">
+                      <h1>Banners</h1>
+                    </div>
+                    <div class="links">
+                      <button class="btn-orange"><p>+ add new</p></button>
+                      <div class="linkList">
+                        <ul>
+                          <li>
+                          <div class="linkEl">
+                            <p>Home page</p><a href="#">http://wwww.homepage.com</a>
+                          </div>
+                            <div class="linkControl">
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
+                              <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
+                              </svg>
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
+                              </svg>
+                            </div>
+                          </li>
+                          <li>
+                          <div class="linkEl">
+                            <p>Banner left</p><a href="#">http://wwww.homepage.com</a>
+                          </div>
+                            <div class="linkControl">
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
+                              <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
+                              </svg>
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
+                              </svg>
+                            </div>
+                          </li>
+                          <li>
+                          <div class="linkEl">
+                            <p>Home page</p><a href="#">http://wwww.homepage.com</a>
+                          </div>
+                            <div class="linkControl">
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
+                              <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
+                              </svg>
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
+                              </svg>
+                            </div>
+                          </li>
+                          <li>
+                          <div class="linkEl">
+                            <p>Home page</p><a href="#">http://wwww.homepage.com</a>
+                          </div>
+                            <div class="linkControl">
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
+                              <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
+                              </svg>
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
+                              </svg>
+                            </div>
+                          </li>
+                        </ul>
+                      </div>
+                      <button class="btn-orange"><p>+ add new</p></button>
+                    </div>
+                  </div>
+                </section>
+                <section id="personalData" class="main">
+                    <div class="content">
+                        <div class="contentTitle">
+                          <h1>Personal data</h1>
+                        </div>
+                        <div class="personalData">
+                            <form action="" method="POST">
+                                <div class="formSec">
+                                  <div class="field">
+                                    <label>Name</label>
+                                    <input type="text" name="name" required>
+                                  </div>
+                                  <div class="field">
+                                    <label>Surname</label>
+                                    <input type="text" name="surname" required>
+                                  </div>
+                                  <div class="field">
+                                    <label>E-mail</label>
+                                    <input type="email" name="email" required>
+                                  </div>
+                                  <div class="field">
+                                    <label>Phone number</label>
+                                    <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+                                  </div>
+                                </div>
+                                <div class="formSec">
+                                    <div class="field">
+                                        <label>Skype</label>
+                                        <input type="text" name="skype" required>
+                                      </div>
+                                      <div class="field">
+                                          <label>ICQ</label>
+                                          <input type="text" name="icq" required>
+                                        </div>
+                                        <div class="field">
+                                            <label>Msn</label>
+                                            <input type="text" name="msn" required>
+                                          </div>
+                                </div>
+                                <div class="formSec">
+                                    <div class="field">
+                                        <label>Wallet</label>
+                                        <input type="number" name="wallet" required>
+                                      </div>
+                                </div>
+                                <div class="formSec">
+                                    <div class="field">
+                                        <label>Password</label>
+                                        <input type="password" name="password" required>
+                                      </div>
+                                      <div class="field">
+                                          <label>Repeat</label>
+                                          <input type="password" name="repeat" required>
+                                        </div>
+                                </div>
+                                <div class="formSec">
+                                  <input class="btn-orange" type="button" value="Save">
+                                </div>
+                              </form>
+                        </div>
+                        </div>
+                </section>
       </div>
-      </div>
+    </div>
     </div>
     <script src="js/script.js"></script>
   </body>
