--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <section class="sideBar">
 
                 <ul class="col sideLinks">
-                  <li class="row">
+                  <li id="generalShow" class="row">
                     <svg
                       version="1.1"
                       id="Layer_1"
@@ -270,7 +270,7 @@
               </section>
           </nav>
       <div class="container row">
-            <section class="main">
+            <section id="general" class="main">
                 <div class="content">
                   <div class="contentTitle">
                     <h1>General statistics</h1>
@@ -345,7 +345,7 @@
                     </div>
                   </div>
                 </section>
-              <section id="links" class="main">
+              <section id="links" class="main show">
                 <div class="content">
                   <div class="contentTitle">
                     <h1>Links</h1>
@@ -353,8 +353,7 @@
                   <div class="links">
                     <button class="btn-orange"><p>+ add new</p></button>
                     <div class="linkList">
-                      <ul>
-                        <li id="1">
+                      <ul id="linkUl">
                         <div class="linkEl">
                           <p>Home page</p><a href="#">http://wwww.homepage.com</a>
                         </div>
@@ -366,7 +365,7 @@
                               </svg>
                           </div>
                         </li>
-                        <li id="2">
+                        <li>
                         <div class="linkEl">
                           <p>Home page</p><a href="#">http://wwww.homepage.com</a>
                         </div>
@@ -378,7 +377,7 @@
                             </svg>
                           </div>
                         </li>
-                        <li id="3">
+                        <li>
                         <div class="linkEl">
                           <p>Home page</p><a href="#">http://wwww.homepage.com</a>
                         </div>
@@ -390,7 +389,7 @@
                             </svg>
                           </div>
                         </li>
-                        <li id="4">
+                        <li>
                         <div class="linkEl">
                           <p>Home page</p><a href="#">http://wwww.homepage.com</a>
                         </div>
@@ -401,7 +400,7 @@
                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
                             </svg>
                           </div>
-                        </li>
+                        </li> -->
                       </ul>
                     </div>
                     <button class="btn-orange"><p>+ add new</p></button>
