--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
     <title>Document</title>
   </head>
-  <body>
+  <body onload="createList(linkArr)">
     <div class="layout col">
           <nav class="topBar row">
               <div class="row brand">
@@ -123,7 +123,6 @@
               </li>
             </ul>
             <section class="sideBar">
-
                 <ul class="col sideLinks">
                   <li id="generalShow" class="row">
                     <svg
@@ -276,8 +275,8 @@
                     <h1>General statistics</h1>
                   </div>
                   <div class="calendar row">
-                    <input type="date" />
                     <label>
+                      <input type="date" />
                       <input type="date" />
                     </label>
                     <button class="btn-orange">
@@ -341,69 +340,22 @@
                       </div>
                     </div>
                     <div class="chart">
-                      <canvas id="myChart" height="200px"></canvas>
+                      <canvas id="myChart" height="200px" width="270px"></canvas>
                     </div>
                   </div>
                 </section>
-              <section id="links" class="main show">
+              <section id="links" class="main">
                 <div class="content">
                   <div class="contentTitle">
                     <h1>Links</h1>
                   </div>
                   <div class="links">
-                    <button class="btn-orange"><p>+ add new</p></button>
+                    <button  class="btn-orange addLinkUp"><p>+ add new</p></button>
                     <div class="linkList">
                       <ul id="linkUl">
-                        <div class="linkEl">
-                          <p>Home page</p><a href="#">http://wwww.homepage.com</a>
-                        </div>
-                          <div class="linkControl">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
-                            <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
-                            </svg>
-                              <svg version="1.1" id="trash" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
-                              </svg>
-                          </div>
-                        </li>
-                        <li>
-                        <div class="linkEl">
-                          <p>Home page</p><a href="#">http://wwww.homepage.com</a>
-                        </div>
-                          <div class="linkControl">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
-                            <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
-                            </svg>
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
-                            </svg>
-                          </div>
-                        </li>
-                        <li>
-                        <div class="linkEl">
-                          <p>Home page</p><a href="#">http://wwww.homepage.com</a>
-                        </div>
-                          <div class="linkControl">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
-                            <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
-                            </svg>
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
-                            </svg>
-                          </div>
-                        </li>
-                        <li>
-                        <div class="linkEl">
-                          <p>Home page</p><a href="#">http://wwww.homepage.com</a>
-                        </div>
-                          <div class="linkControl">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 18 10" style="enable-background:new 0 0 18 10;" xml:space="preserve">
-                            <path d="M7,8H5C3.3,8,2,6.7,2,5s1.3-3,3-3h1V1H5C2.8,1,1,2.8,1,5s1.8,4,4,4h2c2.2,0,4-1.8,4-4h-1C10,6.7,8.7,8,7,8z M13,1h-2 C8.8,1,7,2.8,7,5h1c0-1.7,1.3-3,3-3h2c1.7,0,3,1.3,3,3s-1.3,3-3,3h-1v1h1c2.2,0,4-1.8,4-4S15.2,1,13,1z"/>
-                            </svg>
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 16" style="enable-background:new 0 0 14 16;" xml:space="preserve"><path d="M11,15H3V6H2v10h10V6h-1V15z M0,4v1h14V4H0z M7,2c0.6,0,1,0.4,1,1h1c0-1.1-0.9-2-2-2S5,1.9,5,3h1C6,2.4,6.4,2,7,2z M8,6v8h1 V6H8z M5,6v8h1V6H5z"/>
-                            </svg>
-                          </div>
-                        </li> -->
                       </ul>
                     </div>
-                    <button class="btn-orange"><p>+ add new</p></button>
+                    <button  class="btn-orange addLinkDown"><p>+ add new</p></button>
                   </div>
                 </div>
               </section>
@@ -532,9 +484,95 @@
                         </div>
                         </div>
                 </section>
-      </div>
+                <section id="payout" class="main">
+                  <div class="content">
+                      <div class="contentTitle">
+                          <h1>Payout</h1>
+                        </div>
+                        <div class="payout">
+                            <table>
+                                <tr>
+                                  <th>Date</th>
+                                  <th>Amount ($)</th>
+                                  <th>Deal</th>
+                                  <th>Account</th>
+                                </tr>
+                                <tr>
+                                  <td>17.08.02(1234)</td>
+                                  <td>Maria Anders</td>
+                                  <td>Germany</td>
+                                  <td>Bank</td>
+                                </tr>
+                                <tr>
+                                  <td>17.08.02(1234)</td>
+                                  <td>Francisco Chang</td>
+                                  <td>Mexico</td>
+                                  <td>Bank</td>
+                                </tr>
+                                <tr>
+                                  <td>17.08.02(1234)</td>
+                                  <td>Roland Mendel</td>
+                                  <td>Austria</td>
+                                  <td>Bank</td>
+                                </tr>
+                                <tr>
+                                  <td>17.08.02(1234)</td>
+                                  <td>Helen Bennett</td>
+                                  <td>UK</td>
+                                  <td>Bank</td>
+                                </tr>
+                                <tr>
+                                  <td>17.08.02(1234)</td>
+                                  <td>Yoshi Tannamuri</td>
+                                  <td>Canada</td>
+                                  <td>Bank</td>
+                                </tr>
+                                <tr>
+                                  <td>17.08.02(1234)</td>
+                                  <td>Giovanni Rovelli</td>
+                                  <td>Italy</td>
+                                  <td>Bank</td>
+                                </tr>
+                              </table>
+                        </div>
+                        <div class="pagination">
+                            <a href="#">&laquo;</a>
+                            <a href="#">1</a>
+                            <a href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#">4</a>
+                            <a href="#">5</a>
+                            <a href="#">6</a>
+                            <a href="#">7</a>
+                            <a href="#">8</a>
+                            <a href="#">9</a>
+                            <a href="#">&raquo;</a>
+                          </div>
+                  </div>
+
+                </section>
     </div>
+
+
+    <!-- Modal Section -->
+
+<div class="bg-modal">
+	<div class="modal-contents">
+
+    <div class="close">+</div>
+    <div class="contentTitle">
+      <h1>Add link at the top </h1>
     </div>
+
+		<form class="col" action="">
+			<input class="inputModal" type="text" placeholder="Name">
+			<input class="inputModal" type="text" placeholder="Link">
+			<a href="#" class="btn-orange">Submit</a>
+		</form>
+
+	</div>
+</div>
+
     <script src="js/script.js"></script>
   </body>
 </html>
